work-item thumbnail ui test

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -205,7 +205,7 @@ a {
   -webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
   -ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
-  border-bottom: dotted 1px;
+  /* border-bottom: dotted 1px; */
   color: #44f7c4;
   text-decoration: none;
 }
@@ -2647,9 +2647,29 @@ input[type="button"]:disabled,
 }
 
 .work-item p {
-  font-size: 0.8em;
-  line-height: 1.5em;
+  font-size: 0.9em;
+  line-height: 1.7em;
   margin: 0;
+}
+
+.work-item > h3 {
+  font-size: 1.5rem;
+}
+
+.work-item > h3 a:hover {
+  color: #222 !important;
+  font-weight: 500;
+}
+
+.work-item > a .icon {
+  font-size: 1.4rem;
+  /* margin-top: 12px; */
+  color: #888;
+}
+
+.work-item > a i:active {
+  color: #3eb08f;
+  font-weight: 400;
 }
 
 /* Header */
@@ -3297,10 +3317,6 @@ body.is-touch .poptrox-popup .closer {
   #header {
     padding: 5em 1.5em;
   }
-
-  /* #header h1 br {
-    display: none;
-  } */
 
   /* Footer */
 
